# rag-from-scratch

./: .gitignore  5_Levels_Of_Text_Splitting.ipynb  RAG&Ollama on Harry Potter Story.ipynb  extract_regulations.py  my_rag_from_scratch_1_to_4.ipynb  pyproject.toml  rag_from_scratch_10_and_11.ipynb  rag_from_scratch_12_to_14.ipynb  rag_from_scratch_15_to_18.ipynb  rag_from_scratch_1_to_4.ipynb  rag_from_scratch_1_to_4.py  rag_from_scratch_5_to_9.ipynb  web_extract_regulations.py
