[tool.poetry]
name = "rag-from-scratch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain-community = "^0.0.31"
tiktoken = "^0.6.0"
langchain-openai = "^0.1.1"
langchainhub = "^0.1.15"
chromadb = "^0.4.15"
python-dotenv = "^1.0.1"
langchain = "^0.1.14"
bs4 = "^0.0.2"
playwright = "^1.42.0"
unstructured = "^0.13.0"
selenium = "^4.19.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
